network.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: > 
    This is the network cfn template
    This is a practical lab on Udacity's nanodegree program.
    Trying to acheive the challenge on my own.

Parameters: 
  MyIP:
    Description: My personal IP
    Type: String
    Default: 156.193.33.86/32
  MyAZ: 
    Description: Availability zone
    Type: String
    Default: us-east-1a
Resources: 
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: MyVPCUdacityNDLap
  PubSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref MyAZ
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: PubSubnetA
  MyIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IGWUdacityLab
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyIGW
  MyIPSSHSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: MyIPSSHSecurityGroup
      GroupDescription: desc of the SecurityGroup
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - CidrIp: !Ref MyIP
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          Description: Allowing only my IP address
      SecurityGroupEgress:
        - CidrIp: !Ref MyIP
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          Description: Allowing only my IP address
  ExecludeDefaultSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Limits security group egress traffic
      SecurityGroupEgress:
      - CidrIp: 127.0.0.1/32
        IpProtocol: "-1"
      VpcId: !Ref MyVPC
Outputs:
  MyIPSSHSecurityGroup:
    Description: ssh security group for only my ip
    Value: !Ref MyIPSSHSecurityGroup
    Export: 
      Name: sg-myip-ssh
  ExecludeDefaultSG:
    Description: execlute the default security group
    Value: !Ref ExecludeDefaultSG
    Export: 
      Name: sg-execlude-default
...
  # MyEC2Instance: 
    # KeyName: !Ref EC2KeyName
    # Type: AWS::EC2::Instance
    # Properties: 
    #   AvailabilityZone: !Ref MyAZ
    #   InstanceType: !Ref EC2InstanceType
    #   ImageId: !Ref AMIID
    #   SecurityGroupIds: 
    #     - !Ref ExecludeDefaultSG
    #     - !Ref MyInstanceSecurityGroup
    #   Tags: 
    #     - Key: Project
    #       Value: UdacityND Lab

# aws cloudformation create-stack --template-body=file://network.yml --stack-name=network
# aws cloudformation update-stack --template-body=file://network.yml --stack-name=network
